crates/burn-cube/tests/error/for_loop_range.rs
use burn_cube::prelude::*;

#[cube]
fn range() {
    for _ in 0..10 {}
}

fn main() {}
